# vs-cmake-tests

./: .gitignore  CMakeLists.txt  example_lib.cpp  example_lib.h  main.cpp
